[gd_scene load_steps=5 format=3 uid="uid://d2k7p5q3n8wxm"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_h3o4x"]

[sub_resource type="LabelSettings" id="LabelSettings_health"]
font_size = 14
font_color = Color(1, 1, 1, 0.7)

[sub_resource type="LabelSettings" id="LabelSettings_score"]
font_size = 16
font_color = Color(1, 0.9, 0.3, 1)

[sub_resource type="LabelSettings" id="LabelSettings_timer"]
font_size = 16
font_color = Color(0.5, 0.8, 1, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_h3o4x")

[node name="TopBar" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HealthContainer" type="VBoxContainer" parent="TopBar/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthLabel2" type="Label" parent="TopBar/VBoxContainer/HBoxContainer/HealthContainer"]
layout_mode = 2
text = "HEALTH"
label_settings = SubResource("LabelSettings_health")

[node name="HealthBar" type="ProgressBar" parent="TopBar/VBoxContainer/HBoxContainer/HealthContainer"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="TopBar/VBoxContainer/HBoxContainer/HealthContainer/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -13.0
offset_right = 30.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="TopBar/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="TopBar/VBoxContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
text = "SCORE: 0"
label_settings = SubResource("LabelSettings_score")

[node name="TimerLabel" type="Label" parent="TopBar/VBoxContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
text = "TIME: 00:00"
label_settings = SubResource("LabelSettings_timer")

[node name="ControlsHint" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "[WASD/Arrows] Move  [Space] Jump  [E/Click] Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CompletionScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="PanelContainer" parent="CompletionScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CompletionScreen/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CompletionScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "LEVEL COMPLETE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="CompletionScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TimeLabel" type="Label" parent="CompletionScreen/Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Time: 00:00"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CompletionScreen/Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="CompletionScreen/Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Health Remaining: 100"
horizontal_alignment = 1

[node name="ContinueLabel" type="Label" parent="CompletionScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Press [SPACE] to continue"
horizontal_alignment = 1

[node name="GameOverScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0, 0, 0.9)

[node name="Panel" type="PanelContainer" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/Panel"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScore" type="Label" parent="GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartLabel" type="Label" parent="GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Press [SPACE] to restart"
horizontal_alignment = 1
